--- a/tools/clock/styles.css
+++ b/tools/clock/styles.css
@@ -13,3 +13,8 @@ body {
  text-align: center;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+
+.big {
+  font-size: 64px; 
+  font-family: Georgia, serif; 
+  }
